[package]
name = "ff"
version = "0.2.2"
authors = ["raf"]

[dependencies]
mozrunner = "0.10"
mozprofile = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.3"
mktemp = "0.3"
marionette = {path = "../marionette"}
clap = "2.0"
url = "1.4"
stderrlog = "0.2"
dirs = "2.0"

[target.'cfg(unix)'.dependencies]
chan-signal = "0.2"

[dev-dependencies]
env_logger = "0.4"
pulldown-cmark = { version = "0.0.14", default-features = false }

[[bin]]
name = "ff"
doc = false
